--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,6 +43,11 @@
             <%- include('partials/cv/cv_preview') %>
           </div>
         </div>
+        <div id="skills" class="section">
+          <div class="section-container">
+            <%- include('partials/skills', { skills: skills }); %>
+          </div>
+        </div>
         <div id="contact" class="section">
           <div class="section-container">
             <%- include('partials/contact'); %>
