Fixed icons size and made changes to the resume builder.

--- a/views/partials/cv/cv_education.ejs
+++ b/views/partials/cv/cv_education.ejs
@@ -2,7 +2,7 @@
 <input type="text" id="educationName" name="educationName" placeholder="Institution Name" required>
 
 <label for="educationDescription">Description:</label>
-<textarea id="educationDescription" name="educationDescription" rows="4" placeholder="Describe your education" required></textarea>
+<textarea id="educationDescription" name="educationDescription" placeholder="Describe your education" required></textarea>
 
 <div class="row">
   <label for="educationFrom">From:</label>
