--- a/views/partials/cv/cv_general_info.ejs
+++ b/views/partials/cv/cv_general_info.ejs
@@ -23,10 +23,10 @@
 <input type="text" id="website" name="website" placeholder="Your Website">
 
 <label for="skills">Skills:</label>
-<textarea id="skills" name="skills" rows="4" placeholder="List your skills" required></textarea>
+<textarea id="skills" name="skills" placeholder="List your skills" required></textarea>
 
 <label for="languages">Language Proficiency:</label>
-<textarea id="languages" name="languages" rows="4" placeholder="List languages" required></textarea>
+<textarea id="languages" name="languages" placeholder="List languages" required></textarea>
 
 <label for="interests">Interests:</label>
-<textarea id="interests" name="interests" rows="4" placeholder="List your interests" required></textarea>
+<textarea id="interests" name="interests" placeholder="List your interests" required></textarea>
