--- a/views/partials/cv/cv_preview.ejs
+++ b/views/partials/cv/cv_preview.ejs
@@ -154,6 +154,10 @@
         margin-bottom: 0;
     }
 
+    #previewLanguages {
+        padding-inline-start: 20px;
+    }
+
     .cv-section h2 {
         cursor: move; /* Add this for drag handle indication */
     }
@@ -192,13 +196,13 @@
         </div>
     </div>
     <div id="others" class="cv-section">
+        <div id="languagesContainer">
+            <h2>Languages</h2>
+            <ul id="previewLanguages">Your skills and interests will be shown here.</ul>
+        </div>
         <div id="skillsContainer">
             <h2>Skills</h2>
             <ul id="previewSkills">Your skills and interests will be shown here.</ul>
-        </div>
-        <div id="languagesContainer">
-            <h2>Language proficiency</h2>
-            <ul id="previewLanguages">Your skills and interests will be shown here.</ul>
         </div>
         <div id="interestsContainer">
             <h2>Interests</h2>
