--- a/views/partials/cv/cv_work_experience.ejs
+++ b/views/partials/cv/cv_work_experience.ejs
@@ -2,7 +2,7 @@
 <input type="text" id="jobTitle" name="jobTitle" placeholder="Job Title" required>
 
 <label for="jobDescription">Job Description:</label>
-<textarea id="jobDescription" name="jobDescription" rows="4" placeholder="Describe your job" required></textarea>
+<textarea id="jobDescription" name="jobDescription" placeholder="Describe your job" required></textarea>
 
 <div class="row">
   <label for="jobBeginDate">Job Begin Date:</label>
