--- a/views/partials/cv/cv_projects.ejs
+++ b/views/partials/cv/cv_projects.ejs
@@ -2,7 +2,7 @@
 <input type="text" id="projectName" name="projectName" placeholder="Project Name" required>
 
 <label for="projectDescription">Description:</label>
-<textarea id="projectDescription" name="projectDescription" rows="4" maxlength="300" placeholder="Describe your project" required></textarea>
+<textarea id="projectDescription" name="projectDescription" placeholder="Describe your project" required></textarea>
 
 <input type="hidden" id="projectId">
 
