--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -988,9 +988,39 @@ footer {
   justify-content: center;
   padding: 10px 0;
   font-size: larger;
+  text-wrap: wrap;
 }
 
 .section .section-container .icon-credits h5 {
   margin: 0;
   align-self: center;
+}
+
+#about.section .content div.loader-container {
+  margin-top: 100px;
+  width: 50%;
+  display: flex;
+  align-items: baseline;
+  justify-content: center;
+}
+
+div.loader-container .loader {
+  --d:22px;
+  width: 4px;
+  height: 4px;
+  border-radius: 50%;
+  color: inherit;
+  box-shadow: 
+    calc(1*var(--d))      calc(0*var(--d))     0 0,
+    calc(0.707*var(--d))  calc(0.707*var(--d)) 0 1px,
+    calc(0*var(--d))      calc(1*var(--d))     0 2px,
+    calc(-0.707*var(--d)) calc(0.707*var(--d)) 0 3px,
+    calc(-1*var(--d))     calc(0*var(--d))     0 4px,
+    calc(-0.707*var(--d)) calc(-0.707*var(--d))0 5px,
+    calc(0*var(--d))      calc(-1*var(--d))    0 6px;
+  animation: l27 1s infinite steps(8);
+}
+
+@keyframes l27 {
+  100% {transform: rotate(1turn)}
 }
