--- a/views/partials/about.ejs
+++ b/views/partials/about.ejs
@@ -18,7 +18,7 @@
   <div><span>Email :</span> <a href="mailto:contact@stanimirmonevworks.com">contact@stanimirmonevworks.com</a></div>
   <div><span>Place :</span> 44892 - Bochum, Germany</div>
 
-  <div class="download-button-container">
+  <div id="downloadButtonContainer" class="download-button-container">
     <%- include('downloadButton', {id:'downloadButton', css:'download-button', text:'DOWNLOAD RESUME'}); %>
   </div>
 </div>
