--- a/views/partials/skills.ejs
+++ b/views/partials/skills.ejs
@@ -11,5 +11,5 @@
 </div>
 
 <div class="icon-credits">
-  <h5>Icons thanks to:</h5> <a href="https://www.freepik.com/" target="_blank" rel="noopener noreferrer">Freepik</a>, <a href="https://www.flaticon.com/" target="_blank" rel="noopener noreferrer">Flaticon</a> and <a href="https://www.pngwing.com/" target="_blank" rel="noopener noreferrer">PNGWing</a>
+  <h5>Icons thanks to:</h5> <a href="https://www.freepik.com/" target="_blank" rel="noopener noreferrer">Freepik</a>, <a href="https://www.flaticon.com/" target="_blank" rel="noopener noreferrer">Flaticon</a>, <a href="https://www.pngwing.com/" target="_blank" rel="noopener noreferrer">PNGWing</a> and <a href="https://watermarkly.com/"  target="_blank" rel="noopener noreferrer">Watermarkly</a>
 </div>
