--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -115,6 +115,11 @@ button#applyFilter:hover {
     border-bottom: 1px solid #ddd;
 }
 
+#visitorsTable td:nth-of-type(2) {
+    display: flex;
+    align-items: center;
+}
+
 #visitorsTable th {
     background-color: #007bff;
     color: white;
