--- a/views/partials/cv/cv_preview.ejs
+++ b/views/partials/cv/cv_preview.ejs
@@ -174,6 +174,17 @@
         text-align: center;
     }
 
+    #previewContact {
+        display: flex;
+        justify-content: center;
+        white-space: nowrap;
+        flex-wrap: wrap;
+    }
+
+    #previewContact a div {
+        margin-right: 5px;
+    }
+
     @media screen and (max-width: 966px) {  
         div#cvPreview {
             line-height: 12px;
